# translate-tool

./: .gitignore  README.md
backend/: Dockerfile  LICENSE  Makefile  app.py  docker-compose.yml  index.html  main.py  pyproject.toml  readme.md  requirements.txt  run-backend.sh  run_app.sh  run_app_tensorrt.sh  test.py  test.txt  test_llama.py  tkinter_app.py
backend/.devcontainer/: devcontainer.json
backend/bubble_detector/: bubble_detector.py  bubble_detector_factory.py  yolo_v8_bubble_detector.py  yolo_v8_bubble_detector_tensorRT.py
backend/bubble_detector/convert_tensorrt/: tensortRT.py
backend/config/: logger.py
backend/inpainting/: inpainter.py  inpainter_factory.py  lama_inpaintor.py  opencv_inpainting.py  opencv_inpaintor.py
backend/install/: install_llama_cpp_python.sh  install_ollama.sh  install_paddle.sh  install_tensorrt.sh  install_uv_tool.sh
backend/ocr_engine/: ocr_engine.py  ocr_factory.py  paddle_ocr_engine.py  turbo_ocr_engine.py
backend/text_renderer/: pil_centered_text.py  text_renderer.py
backend/translator/: NLLBTranslator.py  gemma_4_e2b_translator.py  google_translator.py  tencent_translator.py  translategemma_translator.py  translator.py  translator_factory.py
backend/translator/llama_server/: run_server.sh
backend/utils/: languages.py  logger.py
chrome-extension/: background.js  content.js  manifest.json  offscreen.js  popup.html  popup.js  result.html  result.js  stream.html  stream.js
